--- a/settings.sandbox.json
+++ b/settings.sandbox.json
@@ -2,9 +2,14 @@
 	"public" : {
 		"env": "Sandbox",
 		"BT_MERCHANT_ID": "cbx56n2hw7x4rgvx",
-		"BT_PUBLIC_KEY": "5k6v5p5kgz5bcb77"
+		"BT_PUBLIC_KEY": "5k6v5p5kgz5bcb77",
+		"LOGGLEY_SERVER": "betfield.loggly.com"
 	},
 		"private": {
-		"BT_PRIVATE_KEY": "ba4a41de09880c12728f5e6a10df45af"
+		"BT_PRIVATE_KEY": "ba4a41de09880c12728f5e6a10df45af",
+
+		"LOGGLEY_USER": "betfield",
+		"LOGGLEY_PASS": "B3tfield",
+		"LOGGLEY_TOKEN": "c9b2a00e-c830-403b-b1b6-260c4c3c9c0d"
 	}
 }
