--- a/settings.sandbox.json
+++ b/settings.sandbox.json
@@ -3,13 +3,17 @@
 		"env": "Sandbox",
 		"BT_MERCHANT_ID": "cbx56n2hw7x4rgvx",
 		"BT_PUBLIC_KEY": "5k6v5p5kgz5bcb77",
-		"LOGGLEY_SERVER": "betfield.loggly.com"
+		"LOGGLEY_SERVER": "betfield.loggly.com",
+		"RESULTS_FEED_API": "http://api.football-data.org/v1",
+		"RESULTS_FEED_ACTIVE_LEAGUE": "/soccerseasons/424"
 	},
 		"private": {
 		"BT_PRIVATE_KEY": "ba4a41de09880c12728f5e6a10df45af",
 
 		"LOGGLEY_USER": "betfield",
 		"LOGGLEY_PASS": "B3tfield",
-		"LOGGLEY_TOKEN": "c9b2a00e-c830-403b-b1b6-260c4c3c9c0d"
+		"LOGGLEY_TOKEN": "c9b2a00e-c830-403b-b1b6-260c4c3c9c0d",
+		
+		"RESULTS_FEED_KEY": "02f3ec3d0b684f0ca9d53cdbbb22d0bb"
 	}
 }
