--- a/settings.sandbox.json
+++ b/settings.sandbox.json
@@ -16,6 +16,8 @@
 		"LOGGLEY_PASS": "B3tfield",
 		"LOGGLEY_TOKEN": "c9b2a00e-c830-403b-b1b6-260c4c3c9c0d",
 		
-		"RESULTS_FEED_KEY": "02f3ec3d0b684f0ca9d53cdbbb22d0bb"
+		"RESULTS_FEED_KEY": "02f3ec3d0b684f0ca9d53cdbbb22d0bb",
+		
+		"BF_EMAIL": "betfieldou@gmail.com"
 	}
 }
