Rounds added to prediction tables. Register changed top Activate

--- a/settings.sandbox.json
+++ b/settings.sandbox.json
@@ -21,6 +21,6 @@
 		"BF_EMAIL": "betfieldou@gmail.com",
 		"TZ_HOURS": 4,
 		
-		"INACTIVE_TEST_TIME": "June 10, 2016 21:01:00"
+		"INVALID_TEST_TIME": "June 11, 2016 21:01:00"
 	}
 }
